# meck-xmonad

./: default.nix  derivation.nix  hie.yaml  meck-xmonad.cabal  nixpkgs.nix  overlay.nix  shell.nix
exe/: Keymap.hs  Main.hs  Misc.hs  Theme.hs  taffybar.hs  xmonad.hs
lib/: Nord.hs  PagerHints.hs  SideDecoration.hs
lib/Colors/: Nord.hs
lib/Hooks/: Misc.hs
lib/Layout/: Custom.hs  Zoom.hs
lib/Util/: PagerHints.hs  Scaling.hs  ShadowTag.hs  Viewport.hs
lib/Utils/: Taffybar.hs
misc/: taffybar.css
