cabal-version:       2.4
name:                meck-xmonad
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple

executable xmonad
  hs-source-dirs:      ./exe
                       ./lib

  main-is:             xmonad.hs

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wno-redundant-constraints
                       -Wno-missing-signatures

  other-modules:       Colors.Nord

  build-depends:       xmonad
                     , xmonad-contrib
                     , taffybar
                     , base
                     , containers

  default-language:    Haskell2010

executable taffybar
  hs-source-dirs:      ./exe
                       ./lib

  main-is:             taffybar.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wno-redundant-constraints

  build-depends:       base
                     , taffybar
                     , text
                     , haskell-gi-base
                     , gi-gtk
                     , gi-gtk-hs
                     , gi-gdk
                     , gtk-sni-tray
                     , random

  other-modules:       Utils.Taffybar
                     , Colors.Nord

  default-language:    Haskell2010
