cabal-version:       2.4
name:                meck-xmonad
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple

executable xmonad
  hs-source-dirs:      ./exe
                       ./lib

  main-is:             xmonad.hs

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wno-redundant-constraints
                       -Wno-missing-signatures

  other-modules:       Util.PagerHints
                     , Util.Scaling
                     , Layout.Custom
                     , Colors.Nord

  build-depends:       xmonad
                     , xmonad-contrib
                     , base
                     , containers
                     , utf8-string

  default-language:    Haskell2010
