cabal-version:       2.4
name:                meck-xmonad
version:             0.1.1.0
author:              meck
maintainer:          johan@meck.se
build-type:          Simple

common shared-properties
 default-language:   Haskell2010

 build-depends:        xmonad
                     , xmonad-contrib
                     , base
                     , containers
                     , utf8-string
                     , transformers

 ghc-options:        -Wall
                     -Wcompat
                     -Widentities
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wredundant-constraints
                     -fhide-source-paths
                     -Wpartial-fields

executable xmonad
  import:            shared-properties

  hs-source-dirs:    ./exe
                     ./lib

  main-is:           Main.hs

  other-modules:       Util.PagerHints
                     , Util.Scaling
                     , Util.ShadowTag
                     , Layout.Custom
                     , Layout.Zoom
                     , Hooks.Misc
                     , Colors.Nord
                     , Keymap
                     , Theme
                     , Misc
